<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.lxs.oa</groupId>
	<artifactId>oa-parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>oa-parent</name>

	<properties>
		<junit.version>4.11</junit.version>
		<spring.version>3.2.3.RELEASE</spring.version>
		<hibernate.version>4.2.2.Final</hibernate.version>
		<struts.version>2.3.8</struts.version>
		<servlet.version>3.0.1</servlet.version>
		<jsp.version>2.3.0</jsp.version>
		<jstl.version>1.2</jstl.version>
		<activiti.version>5.13</activiti.version>
		<fastjson.version>1.1.37</fastjson.version>
		<mysql.version>5.1.23</mysql.version>
		<oracle.version>11g</oracle.version>
		<c3p0.version>0.9.5-pre1</c3p0.version>
	</properties>

	<scm>
		<connection>scm:svn:https://dadi--20130610n/svn/project/oa-parent/trunk</connection>
		<developerConnection>scm:svn:https://dadi--20130610n/svn/project/oa-parent/trunk</developerConnection>
		<url>https://dadi--20130610n/svn/project/oa-parent/trunk</url>
	</scm>

	<repositories>
		<repository>
			<id>activiti</id>
			<url>https://maven.alfresco.com/nexus/content/groups/public</url>
		</repository>
		<repository>
			<id>thirdparty</id>
			<url>http://localhost:8081/nexus/content/repositories/thirdparty</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>nexus-releases</id>
			<name>Nexus Release Repository</name>
			<url>http://127.0.0.1:8081/nexus/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>nexus-snapshots</id>
			<name>Nexus Snapshot Repository</name>
			<url>http://127.0.0.1:8081/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<type>jar</type>
				<scope>test</scope>
			</dependency>

			<!-- db -->
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>1.3.170</version>
				<type>jar</type>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql.version}</version>
				<type>jar</type>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>com.oracle.driver</groupId>
				<artifactId>ojdbc</artifactId>
				<version>${oracle.version}</version>
			</dependency>

			<!-- activiti -->
			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-engine</artifactId>
				<version>${activiti.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-spring</artifactId>
				<version>${activiti.version}</version>
				<scope>compile</scope>
			</dependency>

			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-explorer</artifactId>
				<version>${activiti.version}</version>
				<exclusions>
					<exclusion>
						<artifactId>vaadin</artifactId>
						<groupId>com.vaadin</groupId>
					</exclusion>
					<exclusion>
						<artifactId>dcharts-widget</artifactId>
						<groupId>org.vaadin.addons</groupId>
					</exclusion>
					<exclusion>
						<artifactId>activiti-simple-workflow</artifactId>
						<groupId>org.activiti</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-modeler</artifactId>
				<version>${activiti.version}</version>
			</dependency>


			<!-- spring -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${spring.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context-support</artifactId>
				<version>${spring.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aop</artifactId>
				<version>${spring.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aspects</artifactId>
				<version>${spring.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-orm</artifactId>
				<version>${spring.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${spring.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.version}</version>
				<type>jar</type>
				<scope>test</scope>
			</dependency>

			<!-- hibernate -->
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>${hibernate.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-ehcache</artifactId>
				<version>${hibernate.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-c3p0</artifactId>
				<version>${hibernate.version}</version>
				<type>jar</type>
				<scope>compile</scope>
				<exclusions>
					<exclusion>
						<groupId>c3p0</groupId>
						<artifactId>c3p0</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- c3p0 -->
			<dependency>
				<groupId>com.mchange</groupId>
				<artifactId>c3p0</artifactId>
				<version>${c3p0.version}</version>
			</dependency>

			<!-- struts2 -->
			<dependency>
				<groupId>org.apache.struts</groupId>
				<artifactId>struts2-core</artifactId>
				<version>${struts.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.struts</groupId>
				<artifactId>struts2-convention-plugin</artifactId>
				<version>${struts.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.struts</groupId>
				<artifactId>struts2-spring-plugin</artifactId>
				<version>${struts.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>

			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${servlet.version}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.servlet.jsp</groupId>
				<artifactId>javax.servlet.jsp-api</artifactId>
				<version>${jsp.version}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>jstl</groupId>
				<artifactId>jstl</artifactId>
				<version>${jstl.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>

			<!-- fastjson -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson.version}</version>
			</dependency>


			<!-- 用于kindeditor -->
			<dependency>
				<groupId>com.googlecode.json-simple</groupId>
				<artifactId>json-simple</artifactId>
				<version>1.1.1</version>
			</dependency>


			<dependency>
				<groupId>com.lxs.oa</groupId>
				<artifactId>oa-core</artifactId>
				<version>${project.version}</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>

		</dependencies>

	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<path>/oa</path>
					<port>8888</port>
					<systemProperties>
						<JAVA_OPTS>-Dsun.jnu.encoding=UTF-8 -Dfile.encoding=UTF-8 -server
							-XX:PermSize=128M -XX:MaxPermSize=512m</JAVA_OPTS>
					</systemProperties>
				</configuration>
			</plugin>

			<!-- dbunit -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>dbunit-maven-plugin</artifactId>
				<version>1.0-beta-3</version>
				<dependencies>
					<dependency>
						<groupId>mysql</groupId>
						<artifactId>mysql-connector-java</artifactId>
						<version>${mysql.version}</version>
					</dependency>
					<dependency>
						<groupId>com.oracle.driver</groupId>
						<artifactId>ojdbc</artifactId>
						<version>11g</version>
					</dependency>
				</dependencies>

				<configuration>
					<driver>com.mysql.jdbc.Driver</driver>
					<url>jdbc:mysql://localhost:3306/oa</url>
					<username>root</username>
					<password>root</password>
					<dataTypeFactoryName>org.dbunit.ext.mysql.MySqlDataTypeFactory</dataTypeFactoryName>
					<metadataHandlerName>org.dbunit.ext.mysql.MySqlMetadataHandler</metadataHandlerName>

					<!-- oracle <driver>oracle.jdbc.OracleDriver</driver> <url>jdbc:oracle:thin:@127.0.0.1:1521:orcl</url> 
						<username>oa</username> <password>1</password> <dataTypeFactoryName>org.dbunit.ext.oracle.Oracle10DataTypeFactory</dataTypeFactoryName> 
						<schema>oa</schema> -->

					<encoding>utf-8</encoding>
					<format>xml</format>
					<type>CLEAN_INSERT</type>
					<dest>${basedir}/src/test/resources/dbunit/mysql.xml</dest>
					<src>${basedir}/src/test/resources/dbunit/mysql.xml</src>

					<tables>
						<table>
							<name>vote_type_</name>
						</table>
						<table>
							<name>menu_</name>
						</table>
						<table>
							<name>user_</name>
						</table>
						<table>
							<name>job_</name>
						</table>
						<table>
							<name>ROLE_</name>
						</table>
						<table>
							<name>DEPT_</name>
						</table>
						<table>
							<name>user_job_</name>
						</table>
						<table>
							<name>ROLE_MENU_</name>
						</table>
						<table>
							<name>ROLE_USER_</name>
						</table>
						<table>
							<name>USER_DEPT_</name>
						</table>
						<table>
							<name>dictionary_</name>
						</table>
					</tables>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.1</version>
				<executions>
					<execution>
						<id>default</id>
						<goals>
							<goal>perform</goal>
						</goals>
						<configuration>
							<pomFileName>${project.build.directory}/checkout/oa-parent/pom.xml</pomFileName>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<modules>
		<module>oa-core</module>
		<module>oa-webapp</module>
	</modules>

</project>
